--- a/src/Header/Header.module.sass
+++ b/src/Header/Header.module.sass
@@ -3,6 +3,7 @@ header
   justify-content: space-between
   padding: 24px 101px 0 101px
   box-sizing: border-box
+  background-color: #ffffff
 
 .menu, .right-section
   list-style: none
@@ -35,6 +36,7 @@ header
       display: inline-block
       width: 6px
       height: 6px
+      cursor: pointer
       margin-left: 6px
       border-bottom: 1.5px solid currentColor
       border-left: 1.5px solid currentColor
@@ -45,3 +47,29 @@ header
   &__currency a, &__cart a
     text-decoration: none
     color: var(--main-color-dark)
+
+
+.currency-list
+  padding: 0
+  margin: 0
+  list-style: none
+
+  &__item
+    font-size: 18px
+    font-weight: var(--font-medium)
+    cursor: pointer
+
+    &:first-child
+      padding: 20px 20px 10px 20px
+
+    &:nth-child(even)
+      padding: 10px 20px
+
+    &:last-child
+      padding: 10px 20px 20px 20px
+
+    &:hover
+      background-color: rgba(94, 206, 123, 0.1)
+      transition: background-color 0.2s ease-out
+
+
