--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
 
+  --font-bold: 700;
   --font-semi-bold: 600;
   --font-medium: 500;
   --font-regular: 400;
