--- a/src/CartModal/ Item/Item.module.sass
+++ b/src/CartModal/ Item/Item.module.sass
@@ -1,5 +1,5 @@
 .item
-  margin-top: 23px
+  margin-top: 30px
   display: grid
 
   &__info
@@ -14,7 +14,7 @@
     flex-direction: column
     align-items: center
     justify-content: space-between
-    padding: 0 10px 4px 30px
+    padding: 0 10px 4px 45px
 
   &__sizes
     grid-column: 1 / 3
@@ -41,14 +41,19 @@
 
   &__size
     cursor: pointer
+    font-family: 'Source Sans Pro', sans-serif
     font-size: 14px
     font-weight: var(--font-regular)
-    padding: 6px 12px
+    width: 24px
+    height: 24px
+    display: grid
+    place-items: center
     box-sizing: border-box
     border: 1px solid var(--main-color-dark)
     margin-right: 8px
 
 .count-button
+  cursor: pointer
   background: none
   width: 24px
   height: 24px
@@ -57,8 +62,12 @@
   font-weight: var(--font-light)
 
 .count-input
-  width: 24px
+  width: 20px
+  padding-left: 6px
+  box-sizing: border-box
   border: none
+  font-size: 16px
+  font-weight: var(--font-medium)
 
   &:focus
     outline: none
