--- a/src/Product/Product.module.sass
+++ b/src/Product/Product.module.sass
@@ -3,4 +3,59 @@
   justify-content: center
   padding-top: 80px
   box-sizing: border-box
-  outline: 1px solid black
+
+  &__photos
+    display: flex
+    flex-direction: column
+
+  &__main-photo
+    margin: 0 100px 0 40px
+
+
+.product-mini
+  margin-bottom: 40px
+  width: 80px
+  height: 80px
+  cursor: pointer
+
+.product-info
+
+  &__title
+    font-size: 30px
+    font-weight: var(--font-regular)
+    width: 200px
+    line-height: 1.6em
+    margin: 0
+
+  &__price
+    font-size: 24px
+
+  &__block-title
+    text-transform: uppercase
+    font-size: 16px
+    font-weight: var(--font-semi-bold)
+    margin: 43px 0 8px 0
+
+  &__sizes
+    padding: 0
+    margin: 0
+    list-style: none
+    display: flex
+
+  &__info
+    width: 290px
+    font-size: 15px
+    font-weight: var(--font-regular)
+    line-height: 1.5em
+    margin: 40px 0 0 0
+
+.size
+  width: 63px
+  height: 45px
+  border: 1px solid var(--main-color-dark)
+  margin-right: 12px
+  font-size: 18px
+  font-weight: var(--font-light)
+  display: grid
+  place-items: center
+  cursor: pointer
