add transitions and improvement of components

--- a/src/Cart/CartItem/CartItem.module.sass
+++ b/src/Cart/CartItem/CartItem.module.sass
@@ -35,6 +35,11 @@
   font-weight: var(--font-regular)
   margin-right: 12px
   cursor: pointer
+  transition: background-color 0.2s ease-out
+
+  &--active
+    background-color: var(--main-color-dark)
+    color: #ffffff
 
 .count-and-image
   display: flex
