--- a/src/CartModal/CartModal.module.sass
+++ b/src/CartModal/CartModal.module.sass
@@ -31,6 +31,7 @@
     animation: ease-out 0.2s forwards fadeIn
 
 .cart
+  min-width: 325px
   padding: 8px 16px 20px 16px
   box-sizing: border-box
   background-color: #ffffff
