--- a/src/Category/ProductCard/ProductCard.module.sass
+++ b/src/Category/ProductCard/ProductCard.module.sass
@@ -47,6 +47,7 @@
     color: var(--disable-color)
     margin: 162px 0 0 0
 
+
 .cart
   padding: 14px
   box-sizing: border-box
@@ -54,6 +55,12 @@
   border-radius: 50%
   position: absolute
   right: 31px
-  bottom: 61px
+  bottom: 64px
   opacity: 0
-  transition: opacity 0.15s ease-out
+  transition: opacity 0.2s ease-out, background 0.2s ease-out, transform 0.2s ease-out, box-shadow 0.2s ease-out
+
+
+.cart:active
+  background-color: hsl(137, 37%, 46%)
+  transform: translate3d(0, -5px, 0)
+  box-shadow: 0 2px 4px 1px rgba(25, 52, 32, 0.2)
