--- a/src/components/CartModal/ Item/Item.module.sass
+++ b/src/components/CartModal/ Item/Item.module.sass
@@ -49,8 +49,15 @@
     display: grid
     place-items: center
     box-sizing: border-box
-    border: 1px solid var(--main-color-dark)
     margin-right: 8px
+    border: 1px solid #A6A6A6
+    background-color: rgba(166, 166, 166, 0.2)
+    color: #A6A6A6
+
+    &--active
+      border: 1px solid var(--main-color-dark)
+      color: var(--main-color-dark)
+      background-color: #ffffff
 
 .count-button
   cursor: pointer
